@@ -1,3 +1,4 @@
+% die 'Oh Shit!';
 <!-- Start "autohandler" -->
 <html>
     <head>
